[package]
name = "reviewz"
version = "0.1.0"
authors = ["Nathan <terakilobyte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.4"
anyhow = "1.0.39"
octocrab = { path = "../octocrab" }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time"] }
